syntax = "proto3";

package Redwood.blob;
option go_package = "redwood.dev/blob/pb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "types/pb/types.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;


message BlobID {
    Redwood.types.HashAlg hashAlg = 1;
    bytes hash = 2;
}

message Manifest {
    uint64 size = 1;
    repeated bytes chunkSHA3s = 2;
}
